gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-link_cfg.rs
#[link(name = "foo", cfg(foo))]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
extern {}

fn main() {}

